--- a/Menu/css/animate.css
+++ b/Menu/css/animate.css
@@ -3613,6 +3613,11 @@
   animation-delay: 2s;
 }
 
+.animated.delay-2-5s {
+  -webkit-animation-delay: 2.5s;
+  animation-delay: 2.5s;
+}
+
 .animated.delay-3s {
   -webkit-animation-delay: 3s;
   animation-delay: 3s;
@@ -3626,6 +3631,11 @@
 .animated.delay-5s {
   -webkit-animation-delay: 5s;
   animation-delay: 5s;
+}
+
+.animated.delay-7s {
+  -webkit-animation-delay: 7s;
+  animation-delay: 7s;
 }
 
 .animated.fast {
