--- a/Menu/css/responsivo.css
+++ b/Menu/css/responsivo.css
@@ -129,5 +129,34 @@ Tablets (col-sm) 576px a 767px
           margin-bottom: 50px;
           justify-content: center;
      }
+     .modal-full {
+          padding: 40px;
+     }
+     .modal-full .item-carrinho {
+          padding-left: 0;
+          padding-right: 0;
+     }
+
+     .modal-full .img-produto {
+          position: relative;
+          left: 0;
+     }
+     .modal-full .img-produto img {
+          width: 50px;
+     }
+     .modal-full .dados-produto {
+          padding-left: 15px;
+          padding-right: 15px;
+          display: grid;
+     }
+     .modal-full .title-produto, .modal-full .price-produto {
+          font-size: 16px!important;
+     }
+     .modal-full .add-numero-itens {
+          padding: 2px 10px;
+     }
+     .modal-full .form-control {
+          font-size: 16px;
+     }
 
 }
